--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 
 <h1 style="font-family:arial;">MekoCat stänger under midsommarhelgen</h1>
+  
+<img src="mekotack.jpg" alt="MekoTack till MekoCat">
 
 </body>
 </html>
