--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
         color: black;
         transition: 0.7s;
       }
+      #bread {
+        font-size: 22px;
+        font-weight: bold;
+        font-family: sans-serif;
+        color: black;
+      }
     </style>
   </head>
   <body>
     <center>
-    <p id="blink">MekoCat stänger under midsommarhelgen!</p>
+    <p id="blink">MekoCat kommer att stängas ned på midsommarafton (23/6)</p>
     <script type="text/javascript">
       var blink = document.getElementById('blink');
       setInterval(function() {
         blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
       }, 1000);
     </script>
+      <p id="bread">Kontakta din närmaste Mekonomenbutik för mer information</p>
     <br><br>
     <img src="mekotack.jpg" width="50%" height="50%">
     </center>
