--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         color: black;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSMQ4YWM1B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HSMQ4YWM1B');
+</script>
   </head>
   <body>
     <center>
